--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -11,7 +11,7 @@
       <input (ngModel)="password" name="password" id="password" type="password" class="form-control"placeholder="Password..." />
     </div>
         
-    <button type="submit" class="btn btn-primary">Login</button>
-    <button type="button" class="btn btn-default">Cancel</button>
+    <button type="submit" (click)="login()" class="btn btn-primary">Login</button>
+    <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
   </form>
 </div>
