--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,22 +1,66 @@
 <h1>Login</h1>
-<hr>
+<hr />
 <div class="col-md-4">
-  <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off" novalidate>
-
+  <form
+    #loginForm="ngForm"
+    (ngSubmit)="login(loginForm.value)"
+    autocomplete="off"
+    novalidate
+  >
     <div class="form-group">
       <label for="userName">User Name:</label>
-      <em *ngIf="loginForm.controls.userName?.invalid && (loginForm.controls.userName?.touched || mouseoverLogin)">Required</em>
-      <input (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." required />
+      <em
+        *ngIf="
+          loginForm.controls.userName?.invalid &&
+          (loginForm.controls.userName?.touched || mouseoverLogin)
+        "
+        >Required</em
+      >
+      <input
+        (ngModel)="(userName)"
+        name="userName"
+        id="userName"
+        type="text"
+        class="form-control"
+        placeholder="User Name..."
+        required
+      />
     </div>
-    <div class="form-group" >
+    <div class="form-group">
       <label for="password">Password:</label>
-      <em *ngIf="loginForm.controls.password?.invalid && (loginForm.controls.password?.touched || mouseoverLogin)">Required</em>
-      <input (ngModel)="password" name="password" id="password" type="password" class="form-control" placeholder="Password..." required/>
+      <em
+        *ngIf="
+          loginForm.controls.password?.invalid &&
+          (loginForm.controls.password?.touched || mouseoverLogin)
+        "
+        >Required</em
+      >
+      <input
+        (ngModel)="(password)"
+        name="password"
+        id="password"
+        type="password"
+        class="form-control"
+        placeholder="Password..."
+        required
+      />
     </div>
 
-    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false">
-      <button type="submit" (click)="login()" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
+    <span
+      (mouseenter)="mouseoverLogin = true"
+      (mouseleave)="mouseoverLogin = false"
+    >
+      <button
+        type="submit"
+        (click)="(login)"
+        class="btn btn-primary"
+        [disabled]="loginForm.invalid"
+      >
+        Login
+      </button>
     </span>
-    <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
+    <button type="button" (click)="cancel()" class="btn btn-default">
+      Cancel
+    </button>
   </form>
 </div>
