--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -8,8 +8,9 @@
       autocomplete="off"
       novalidate
     >
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{ error: !validateFirstName() }">
         <label for="firstName">First Name:</label>
+        <em *ngIf="!validateFirstName()">Required</em>
         <input
           id="firstName"
           type="text"
@@ -18,8 +19,9 @@
           formControlName="firstName"
         />
       </div>
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{ error: !validateLastName() }">
         <label for="lastName">Last Name:</label>
+        <em *ngIf="!validateLastName()">Required</em>
         <input
           id="lastName"
           type="text"
