--- a/src/app/events/create-session-component/create-session.component.html
+++ b/src/app/events/create-session-component/create-session.component.html
@@ -38,6 +38,7 @@
             <label for="abstract">Abstract:</label>
             <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.required">Required</em>
             <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.maxlength">Cannot exeed 400 characters</em>            
+            <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.restrictedWords">'foo' word is not allowed</em>            
             <textarea formControlName="abstract" id="abstract" rows=3 class="form-control" placeholder="abstract..."></textarea>
           </div>
           <button type="submit" [disabled]="newSessionForm.invalid" class="btn btn-primary">Save</button>
