--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,6 +1,6 @@
 <div [routerLink]="['/events', event.id]" class="well hoverwell thumbnail">
     <h2>{{ event?.name | uppercase }}</h2>
-    <div>Date: {{ event?.date }}</div>
+    <div>Date: {{ event?.date | date:'shortDate'  }}</div>
     
     <div [ngClass]="getStartTimeClass()" [ngSwitch]="event?.time">Time: {{ event?.time }}
         <span *ngSwitchCase="'8:00 am'"> (Early Start)</span>
@@ -8,7 +8,7 @@
         <span *ngSwitchDefault> (On time) </span>
     </div>
 
-    <div>Price: ${{ event?.price }}</div>
+    <div>Price: {{ event?.price | currency:'USD' }}</div>
     <div *ngIf="event?.location" >
         <span>Location: {{ event?.location?.address }}</span>
         <span class="pad-left">{{ event?.location?.city }}, {{ event?.location?.country }}</span>
