--- a/src/app/sample/for/parent.component.html
+++ b/src/app/sample/for/parent.component.html
@@ -1,4 +1,4 @@
 <div>
     <h1>NgFor Sample</h1>
-    <child-component *ngFor="let item in items" [event]="item" (eventClick)="handleEventClicked($event)"></child-component>
+    <!-- <child-component *ngFor="let item in items" [event]="item" (eventClick)="handleEventClicked($event)"></child-component> -->
 </div>
